<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@color/mainColor"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentInsetStart="20dp"
            android:contentInsetLeft="20dp"
            app:collapsedTitleGravity="start"
            app:contentInsetLeft="20dp"
            app:contentInsetStart="20dp"
            app:contentScrim="@color/mainColor"
            app:expandedTitleGravity="start"
            app:expandedTitleTextAppearance="@color/mainColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            tools:targetApi="lollipop">


            <ImageView
                android:id="@+id/movie_image_parallax"
                android:layout_width="match_parent"
                android:layout_height="306dp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_sample"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:contentDescription="@string/app_name" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/movie_title"
                    android:layout_above="@+id/movie_release_date"
                    android:textColor="@color/whiteColor"
                    android:layout_marginBottom="10dp"
                    android:textSize="22sp"
                     />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/movie_category"
                    android:layout_marginBottom="100dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/whiteColor"
                    android:textSize="16sp"
                  />


            </RelativeLayout>





        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainColor"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            android:fillViewport="true"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <View
                android:id="@+id/rowLine"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/lightGreyColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfos" />


            <LinearLayout
                android:id="@+id/linearLayoutInfos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="@dimen/btnspacelayout_width"
                    android:layout_height="@dimen/btnspacelayout_height"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"

                    >

                    <ImageView
                        android:id="@+id/movie_note_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:padding="10dp"
                        android:tint="@color/whiteColor"
                        app:srcCompat="@drawable/ic__star_rating" />

                    <TextView
                        android:id="@+id/movie_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Note"
                        android:textColor="@color/whiteColor"
                        android:textSize="12sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="@dimen/btnspacelayout_width"
                    android:layout_height="@dimen/btnspacelayout_height"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"

                    >

                    <ImageView
                        android:id="@+id/movie_duration_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:gravity="center"
                        android:padding="10dp"
                        android:tint="@color/whiteColor"
                        app:srcCompat="@drawable/ic__time_duration" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="1h30"
                        android:textColor="@color/whiteColor"
                        android:textSize="12sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lineararchive"
                    android:layout_width="@dimen/btnspacelayout_width"
                    android:layout_height="@dimen/btnspacelayout_height"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"


                    >

                    <ImageView
                        android:id="@+id/movie_min_age_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:tint="@color/whiteColor"
                        app:srcCompat="@drawable/ic__age" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/_18"
                        android:textColor="@color/whiteColor"
                        android:textSize="12sp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/btnspacelayout_width"
                    android:layout_height="@dimen/btnspacelayout_height"
                    android:orientation="vertical"


                    >

                    <ImageView
                        android:id="@+id/movie_more_info_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:gravity="center"
                        android:padding="10dp"
                        android:scaleType="centerInside"
                        android:tint="@color/whiteColor"
                        app:srcCompat="@drawable/ic__info" />

                    <TextView
                        android:id="@+id/notiftext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/more_info"
                        android:textColor="@color/whiteColor"
                        android:textSize="12sp"

                        />
                </LinearLayout>

            </LinearLayout>


            <FrameLayout
                android:id="@+id/group_details_place"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rowLine">

            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updatePhotoGrpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:tint="@color/whiteColor"
        app:backgroundTint="@color/redColor"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic__play_movie" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>